# quant-scalper

./: .env  .env.example  .gitignore  ALL_ENHANCEMENTS_COMPLETE.md  BACKTEST_ENGINE_COMPLETE.md  CONTRIBUTING.md  DASHBOARD_COMPLETE.md  Dockerfile  FINAL_SUMMARY.md  GIT_COMMIT_COMPLETE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PROGRESS.md  LICENSE  MARCUS_PHASE5_REPORT_2026-02-03.md  MARCUS_STATUS_REPORT.md  MARCUS_V4_REPORT.md  NEXT_STEPS.md  PHASE5_STATUS.md  PRIORITY_TASKS.md  PROJECT-STATUS.md  PROJECT_COMPLETE.md  PROJECT_OVERVIEW.md  PROJECT_SUMMARY.txt  QUICKSTART.md  README.md  ROADMAP_SIMPLIFIED.md  SETUP_SUMMARY.md  TASK_2.2_2.3_COMPLETE.md  TESTING.md  ZSCORE_TEST_REPORT.md  dashboard.sh  docker-compose.yml  pytest.ini  requirements-test.txt  requirements.txt  run_volatile_backtest.py  validate_zscore_fix.py
bot/: __init__.py  config.py  main.py
bot/alerts/: __init__.py  telegram.py
bot/backtest/: __init__.py  engine.py  walkforward.py
config/: config.yaml.example
docs/: opus-analysis.md  research-summary.md
rust/: Cargo.toml
rust/src/: lib.rs  risk_calculator.rs  zscore.rs
scripts/: benchmark.py  check_setup.sh  generate_test_data.py  optimize_params.py  run_tests.sh  setup.sh  start_dashboard.py  status.sh  test_all_new.sh  test_components.sh  validate_config.py
tasks/: TASK_QUEUE.md  TASK_STATUS.md
tests/: README.md  conftest.py  quick_test_new_features.py  quick_working_test.py  test_circuit_breaker.py  test_engine.py  test_timezone.py  test_trading_hours_fix.py  verify_imports.py  verify_imports_fixed.py  verify_imports_simplified.py
(+32 files in other folders)
