[package]
name = "quant-scalper-rust"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance components for trading bot"

[lib]
name = "quant_scalper_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }

[dev-dependencies]
criterion = "0.5"

# Benchmarks will be added when needed
# [[bench]]
# name = "zscore_bench"
# harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
